Bug 813550 - Location bar's placeholder in an RTL chrome should be aligned on the right. r=ehsan a=nonlibxul
UltraBlame original commit: 3bc030b6ee8fdcdd567a9382e66b6c8aa1ae35d0

--- a/layout/style/forms.css
+++ b/layout/style/forms.css
@@ -76,14 +76,15 @@ input::-moz-placeholder {
   line-height: -moz-block-height;
 }
 
-
-
-
-
 @-moz-document url-prefix(chrome://) {
-  input.uri-element-right-align:-moz-locale-dir(rtl) > .anonymous-div {
+  input.uri-element-right-align:-moz-locale-dir(rtl) {
+    direction: ltr !important;
     text-align: right !important;
   }
+
+  
+
+
 
   input.uri-element-right-align:-moz-locale-dir(rtl) > .anonymous-div[dir=ltr] {
     text-align: left !important;
